--- a/Instalaciones.html
+++ b/Instalaciones.html
@@ -1,86 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>RiverText</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: auto;
-        }
-        .wrapper {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-        }
-        .form-box {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-size: cover;
-            background-position: center;
-            padding: 2rem;
-        }
-        .register-container {
-            background: rgba(255, 255, 255, 0.8);
-            padding: 2rem;
-            border-radius: 10px;
-            max-width: 1200px;
-            width: 100%;
-        }
-        .register-container header {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-        }
-        .sports-complex {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1rem;
-            margin-top: 1rem;
-        }
-        .sports-complex .complex {
-            border: 1px solid #000;
-            padding: 1rem;
-            flex: 1 1 calc(33.333% - 2rem);
-            box-sizing: border-box;
-            background: #fff;
-            border-radius: 8px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="styles/styles.css">
+  <title>RiverText - Instalaciones</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      color: #333;
+    }
+
+    header {
+      background: #2c3e50;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: bold;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+
+    .sports-complex {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+      padding: 40px;
+    }
+
+    .complex {
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .complex:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 16px rgba(0,0,0,0.2);
+    }
+
+    .complex img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .complex h3 {
+      margin: 1rem 1rem 0.5rem;
+      font-size: 1.3rem;
+      color: #2c3e50;
+    }
+
+    .complex p {
+      margin: 0 1rem 1rem;
+      font-size: 0.95rem;
+      color: #555;
+    }
+
+    /* Botón volver */
+    .volver {
+      display: block;
+      width: fit-content;
+      margin: 30px auto;
+      padding: 12px 24px;
+      background-color: #28a745;
+      color: #fff;
+      font-size: 1.1rem;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    .volver:hover {
+      background-color: #218838;
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
-    <div class="wrapper">
-        <nav class="nav">
-            <div class="nav-logo">
-                <p>RiverText</p>
-            </div>
-            <div class="nav-menu" id="navMenu">
-                <ul>
-                    <li><a href="index.html" class="link">Inicia Sesion</a></li>
-                    <li><a href="inicio.html" class="link">Inicio</a></li>
-                    <li><a href="comunicados.html" class="link">Comunicados</a></li>
-                    <li><a href="eventos.html" class="link">Eventos</a></li>
-                    <li><a href="Instalaciones.html" class="link active">Instalaciones</a></li>
-                    <li><a href="about.html" class="link">Acerca de nosotros</a></li>
-                    <li><a href="pedido.html" class="link">Pedidos</a></li>
-                </ul>
-            </div>
-        </nav>
-        <div class="form-box">
-            <div class="register-container">
-                <header>Lista de Complejos Deportivos</header>
-                <div class="sports-complex">
-                    <iframe src="." style="width:100%; height:400px; border:none;"></iframe>
-                </div>
-            </div>
-        </div>
+  <header>Lista de Complejos Deportivos</header>
+
+  <div class="sports-complex">
+    <div class="complex">
+      <img src="imagenes/cancha1.jpg" alt="Cancha de fútbol">
+      <h3>Cancha Sintética</h3>
+      <p>Iluminación nocturna, césped artificial y graderías techadas.</p>
     </div>
+    <div class="complex">
+      <img src="imagenes/piscina.jpg" alt="Piscina olímpica">
+      <h3>Piscina Olímpica</h3>
+      <p>8 carriles, sistema de calefacción y vestuarios modernos.</p>
+    </div>
+    <div class="complex">
+      <img src="imagenes/gimnasio.jpg" alt="Gimnasio">
+      <h3>Gimnasio Multifuncional</h3>
+      <p>Equipos de última generación y entrenadores certificados.</p>
+    </div>
+  </div>
+
+  <!-- Botón para volver al inicio -->
+  <a href="index.html" class="volver"><i class='bx bx-home'></i> Volver al Inicio</a>
+
 </body>
 </html>
