--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                     <header>Inicia sesión</header>
                 </div>
 
-                <form action="cgi-bin/login.pl" method="post">
-                    <div class="input-box">
+                <form action="/cgi-bin/admin/login.py" method="post">                    <div class="input-box">
                         <input type="text" name="email" class="input-field" placeholder="Usuario o gmail">
                         <i class="bx bx-user"></i>
                     </div>
